fix: repo names

--- a/playbooks/roles/edx_ansible/templates/update.j2
+++ b/playbooks/roles/edx_ansible/templates/update.j2
@@ -83,8 +83,8 @@ repos_to_cmd["payment"]="$edx_ansible_cmd payment.yml -e 'PAYMENT_MFE_VERSION=$2
 repos_to_cmd["learning"]="$edx_ansible_cmd learning.yml -e 'LEARNING_MFE_VERSION=$2'"
 repos_to_cmd["ora_grading"]="$edx_ansible_cmd ora_grading.yml -e 'ORA_GRADING_MFE_VERSION=$2'"
 repos_to_cmd["enterprise_catalog"]="$edx_ansible_cmd enterprise_catalog.yml -e 'ENTERPRISE_CATALOG_MFE_VERSION=$2'"
-repos_to_cmd["course-authoring"]="$edx_ansible_cmd course_authoring.yml -e 'COURSE_AUTHORING_MFE_VERSION=$2'"
-repos_to_cmd["library-authoring"]="$edx_ansible_cmd library_authoring.yml -e 'LIBRARY_AUTHORING_MFE_VERSION=$2'"
+repos_to_cmd["course_authoring"]="$edx_ansible_cmd course_authoring.yml -e 'COURSE_AUTHORING_MFE_VERSION=$2'"
+repos_to_cmd["library_authoring"]="$edx_ansible_cmd library_authoring.yml -e 'LIBRARY_AUTHORING_MFE_VERSION=$2'"
 
 if [[ -z $1 || -z $2 ]]; then
     echo
